--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "dotenv": "^16.0.3",
     "emoji-mart": "^3.0.1",
     "moment": "^2.29.1",
     "react": "^17.0.1",
