--- a/.env
+++ b/.env
@@ -1,5 +1,11 @@
-MONGODB_URL_test = mongodb://localhost:27017/mern
+DATABASE_LOCAL = mongodb://localhost:27017/mern
+USERNAME = Pavan
+DATABASE = mongodb+srv://Pavan:<password>@cluster0.iuksf2r.mongodb.net/
+DATABASE_PASSWORD = 0prqIZYVuDdlw2Nz 
 
 ACCESS_TOKEN_SECRET = itissecret
-
 REFRESH_TOKEN_SECRET = itisalsosecret
+
+API_KEY = 898422118828544
+API_SECRET = lfi7iKSV4z-5FBLo2fWuO0Kbt_I
+CLOUD_NAME = dqed8sftd
