--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DATABASE_LOCAL = mongodb://localhost:27017/mern
 USERNAME = Pavan
-DATABASE = mongodb+srv://Pavan:<password>@cluster0.iuksf2r.mongodb.net/
-DATABASE_PASSWORD = 0prqIZYVuDdlw2Nz 
+DATABASE = mongodb+srv://Pavan:<password>@cluster0.vsjyhfg.mongodb.net/mern?retryWrites=true&w=majoritymajority
+DATABASE_PASSWORD = GTAs2mV5o85aVfWN
 
 ACCESS_TOKEN_SECRET = itissecret
 REFRESH_TOKEN_SECRET = itisalsosecret
