--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 DATABASE_LOCAL = mongodb://localhost:27017/mern
 USERNAME = Pavan
-DATABASE = mongodb+srv://Pavan:<password>@cluster0.vsjyhfg.mongodb.net/mern?retryWrites=true&w=majoritymajority
-DATABASE_PASSWORD = GTAs2mV5o85aVfWN
+DATABASE = mongodb+srv://Pavan:<PASSWORD>@cluster0.0mtp6d2.mongodb.net/mern?retryWrites=true&w=majority
+
+DATABASE_PASSWORD = admin
 
 ACCESS_TOKEN_SECRET = itissecret
 REFRESH_TOKEN_SECRET = itisalsosecret
